# django-htmx

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
src/core/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html
